[package]
name = "bombolone"
version = "0.1.0"
authors = ["dusan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "1.0.1"
actix-web = { version = "2.0.0", features=["openssl"] }
actix-rt = "1.0"
actix-identity = "0.2.0"
actix-files = "0.2.1"
dotenv = "0.15.0"
url = "2.0"
futures = "0.3.1"
failure = "0.1.3"
log = "0.4"
qrcode = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.7"
chrono = { version = "0.4.6", features = ["serde"] }
